--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-dom": "^15.6.1",
+    "react-modal": "^2.2.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
